--- a/app/globals.css
+++ b/app/globals.css
@@ -8,19 +8,23 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-lilita-one);
   --font-mono: var(--font-geist-mono);
+  --text-huge: 12rem;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    /* --background: #0a0a0a; */
     --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
+  /* background: var(--background); */
+  background: #111111;
   color: var(--foreground);
+  height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
